# kickstart

./: .gitmodules  README.md
audio_delayer/: Makefile  RIFFWaveFileShifter.cpp  RIFFWaveFileShifter.hpp  main.cpp
audio_mixer/: Makefile  MixerAlgorithm.hpp  MixerAlgorithmSimpleAddWithClipping.cpp  MixerAlgorithmSimpleAddWithClipping.hpp  MixerAlgorithmSimpleAddWithNormalization.cpp  MixerAlgorithmSimpleAddWithNormalization.hpp  MixerApplication.cpp  MixerApplication.hpp  README.md  main.cpp
audio_processing/: .gitignore
audio_processing/audio_analyzer/jack/clients/: Makefile.am  autogen.sh  configure.ac
audio_processing/audio_analyzer/jack/clients/src/: AudioAnalyzer.h  JackClient.cpp  Makefile.am  debug.h
audio_shifter/: RIFFWaveFileShifter.cpp  RIFFWaveFileShifter.hpp
buildbot_hue_control/: buildbot_hue_control.py
dhcpd_bootp_manager/: DHCPDManager.py
environment_noise_remover/: README.md
fancy_search/: DataElementIndex.py  DataElementIndexer.py  LocalManPageImporter.py  ManPageTextDataElement.py  README.md  TextDataElement.py  TextDataQuery.py  fancy_search.py
image_converter/: command_line_manager.sh  common_functions.sh  convert_batch.sh  resize_batch.sh
irq_issue/: irq_issue.c
jack_lsp2/: dummy.file  jack_lsp_parser.py
linux_configuration_things/: README.md
minimal_hue_control/: README.md  buildbot_job_poller.py  buildmaster_builder_poller.py  config.json  minimal_hue_control.py
my_thinkpad_fan_control/: load_reader.py  my_thinkpad_fan_control.py  temp_reader.py  thinkpad_fan_control_configuration.py  view.py
ni_mouse/: .gitignore  (+1 more)
(+124 files in other folders)
