bin_PROGRAMS = jackAudioAnalyzer
jackAudioAnalyzer_SOURCES = AudioAnalyzer.cpp JackClient.cpp WindowFunction.cpp

include_jackAudioAnalyzer = ../build/include
lib_jackAudioAnalyzer = ../build/include/lib
jackAudioAnalyzer_LDFLAGS = -lfftw3

noinst_HEADERS = AudioAnalyzer.h JackClient.h WindowFunction.h
